# tryfast

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 7676c156fbfd_new_migration.py  88e0a0f7eed8_new_migration.py
