[tool.poetry]
name = "tryfast"
version = "0.1.0"
description = ""
authors = ["Natalia Teplynina <nt@mnt9.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
